--- a/i18n/planner-messages_en.properties
+++ b/i18n/planner-messages_en.properties
@@ -1,1 +1,30 @@
 # Please, see https://documentation.magnolia-cms.com/display/DOCS/Internationalization
+#planner component dialog
+planner.components.planner.tabEvents.label = Events
+planner.components.planner.tabEvents.events.label = Events
+planner.components.planner.tabEvents.events.compositeField.title.label = Title
+planner.components.planner.tabEvents.events.compositeField.startDate.label = Start date
+planner.components.planner.tabEvents.events.compositeField.endDate.label = End date
+planner.components.planner.tabEvents.events.compositeField.description.label = Description
+planner.components.planner.tabEvents.events.compositeField.category.label = Category
+planner.components.planner.tabMain.categories.label = Categories to show
+planner.components.planner.tabMain.allowActions.buttonLabel = Allow create/update events from calendar
+planner.components.planner.tabMain.allowActions.label = Allow actions
+
+
+
+#event categories app
+eventCategories.app.label = Event categories
+eventCategories.browser.label = Categories for events
+eventCategories.browser.actionbar.sections.category.label = Event category
+eventCategories.browser.actionbar.sections.root.label = Event categories
+eventCategories.browser.views.treeview.description.label = Description
+eventCategories.browser.views.listview.description.label = Description
+eventCategories.browser.actions.addCategory.label = Add category
+eventCategories.browser.actions.confirmDeleteCategory.label = Delete category
+eventCategories.browser.actions.editCategory.label = Edit category
+eventCategories.category.name.label = Name
+eventCategories.category.displayName.label = Display name
+eventCategories.category.description.label = Description
+eventCategories.category.color.label = Color
+eventCategories.category.color.description = Sample values: #EEE or blue
