--- a/i18n/planner-messages_en.properties
+++ b/i18n/planner-messages_en.properties
@@ -10,14 +10,20 @@ planner.components.planner.tabEvents.events.compositeField.category.label = Cate
 planner.components.planner.tabMain.categories.label = Categories to show
 planner.components.planner.tabMain.allowActions.buttonLabel = Allow create/update events from calendar
 planner.components.planner.tabMain.allowActions.label = Allow actions
-
+planner.components.planner.tabMain.title.label = Title
 
 
 #event categories app
 eventCategories.app.label = Event categories
 eventCategories.browser.label = Categories for events
 eventCategories.browser.actionbar.sections.category.label = Event category
+eventCategories.category.label = Define event category properties
 eventCategories.browser.actionbar.sections.root.label = Event categories
+eventCategories.browser.actionbar.sections.folder.label = Folder
+eventCategories.browser.actions.confirmDeleteCategory.confirmationHeader = Delete this category?
+eventCategories.browser.actions.confirmDeleteCategory.confirmationMessage = The category selected will be marked for deletion.
+eventCategories.browser.actions.confirmDeleteCategory.cancelLabel  = No
+eventCategories.browser.actions.confirmDeleteCategory.proceedLabel = Yes, delete
 eventCategories.browser.views.treeview.description.label = Description
 eventCategories.browser.views.listview.description.label = Description
 eventCategories.browser.actions.addCategory.label = Add category
@@ -27,4 +33,4 @@ eventCategories.category.name.label = Name
 eventCategories.category.displayName.label = Display name
 eventCategories.category.description.label = Description
 eventCategories.category.color.label = Color
-eventCategories.category.color.description = Sample values: #EEE or blue
+eventCategories.category.color.description = Sample values: #EEE or blue https://www.w3schools.com/colors/colors_picker.asp
