rename project and updates

--- a/i18n/magnolia-calendar-planner.properties
+++ b/i18n/magnolia-calendar-planner.properties
@@ -1,16 +1,16 @@
 # Please, see https://documentation.magnolia-cms.com/display/DOCS/Internationalization
 #planner component dialog
-planner.components.planner.tabEvents.label = Events
-planner.components.planner.tabEvents.events.label = Events
-planner.components.planner.tabEvents.events.compositeField.title.label = Title
-planner.components.planner.tabEvents.events.compositeField.startDate.label = Start date
-planner.components.planner.tabEvents.events.compositeField.endDate.label = End date
-planner.components.planner.tabEvents.events.compositeField.description.label = Description
-planner.components.planner.tabEvents.events.compositeField.category.label = Category
-planner.components.planner.tabMain.categories.label = Categories to show
-planner.components.planner.tabMain.allowActions.buttonLabel = Allow create/update events from calendar
-planner.components.planner.tabMain.allowActions.label = Allow actions
-planner.components.planner.tabMain.title.label = Title
+magnolia-calendar-planner.components.planner.tabEvents.label = Events
+magnolia-calendar-planner.components.planner.tabEvents.events.label = Events
+magnolia-calendar-planner.components.planner.tabEvents.events.compositeField.title.label = Title
+magnolia-calendar-planner.components.planner.tabEvents.events.compositeField.startDate.label = Start date
+magnolia-calendar-planner.components.planner.tabEvents.events.compositeField.endDate.label = End date
+magnolia-calendar-planner.components.planner.tabEvents.events.compositeField.description.label = Description
+magnolia-calendar-planner.components.planner.tabEvents.events.compositeField.category.label = Category
+magnolia-calendar-planner.components.planner.tabMain.categories.label = Categories to show
+magnolia-calendar-planner.components.planner.tabMain.allowActions.buttonLabel = Allow create/update events from calendar
+magnolia-calendar-planner.components.planner.tabMain.allowActions.label = Allow actions
+magnolia-calendar-planner.components.planner.tabMain.title.label = Title
 
 
 #event categories app
