create calendar page and remove home page template

--- a/i18n/magnolia-calendar-planner.properties
+++ b/i18n/magnolia-calendar-planner.properties
@@ -1,5 +1,6 @@
 # Please, see https://documentation.magnolia-cms.com/display/DOCS/Internationalization
 #planner component dialog
+page.calendar = Calendar
 magnolia-calendar-planner.components.planner.tabEvents.label = Events
 magnolia-calendar-planner.components.planner.tabEvents.events.label = Events
 magnolia-calendar-planner.components.planner.tabEvents.events.compositeField.title.label = Title
